Tweaks to cats vs dogs

--- a/Cats vs. Dogs.ipynb
+++ b/Cats vs. Dogs.ipynb
@@ -29,7 +29,7 @@
    "id": "d7c5746b",
    "metadata": {},
    "source": [
-    "We recieve the images as a .zip file, containing a folder with images. Most of the work as I see it is to transform the images into data that the classifier can understand (numeric). As each image is colored, then each pixel of the image contains 3 to 4 values (red, green, blue, alpha) - in the case of our images it is 3 (without the alpha). Thus, a picture with the dimentions of 500X500 (for example) has 250000 pixels, each containing 3 value. That is a lot of data for the computer to go through even for one image, and we have 25000 of those.<br>\n",
+    "We recieve the images as a .zip file, containing a folder with images. Most of the work as I see it is to transform the images into data that the classifier can understand (numeric). As each image is colored, then each pixel of the image contains 3 to 4 values (red, green, blue, alpha) - in the case of our images it is 3 (without the alpha). Thus, a picture with the dimentions of 500X500 (for example) has 250000 pixels, each containing 3 values (in total 750000 values). That is a lot of data for the computer to go through even for one image, and we have 25000 of those.<br>\n",
     "As such, our primary objective is to reduce the amount of data each classifier has to comb through to achieve the end result. We shall do this by first removing the RGB values from the image (transforming them to grayscale), as the color the not contribute much to the determination of whether the image is of a cat or a dog, and by removing it, we shrink the data volume by three times.<br>\n",
     "Next, we wish to transform the images into a dataframe, due to the classifiers not being able to (by themselves) work on raw images. To do that, we have to tranform each image (which can be shown as a 2D array) into a 1D array, and each record of the new dataframe shall be an image thus transformed."
    ]
@@ -39,7 +39,7 @@
    "id": "928e043a",
    "metadata": {},
    "source": [
-    "As the image database is far too large to import to GitHub, we shall not do so. The images were taken from and can be downloaded from Kaggle.com at the link:\n",
+    "As the image database is far too large to import to GitHub, we shall not do so. The images were taken and can be downloaded from Kaggle.com at the link:\n",
     "https://www.kaggle.com/c/dogs-vs-cats-redux-kernels-edition/data"
    ]
   },
@@ -1253,7 +1253,7 @@
     }
    ],
    "source": [
-    "print(\"There are\", df.isna().sum().sum(), \"NaN value\")"
+    "print(\"There are\", df.isna().sum().sum(), \"NaN values\")"
    ]
   },
   {
@@ -1326,12 +1326,12 @@
    "metadata": {},
    "source": [
     "We need to check that the training set does not contain duplicates (all feature values are the same), as they are not helpful for the classifiers. When found, the duplicates can be safely removed. This is run on the training set, and was not done before the split into training and testing sets because in theory, the same image as the one the calssifiers were trained on can be given to the classifier to test and return an answer on whether the image is that of a cat or a dog. Hence, the duplicates should be removed only from the training set, and not from the validation set or from the test set.<br>\n",
-    "This is done by first merging the X_train and the y_train so that when duplicates are found, they are removed todether with the label, otherwise the record will be removed from X_train and not removed from y_train, thus leaving different dimentions than the ones needed for the classifiers."
+    "This is done by first merging the X_train and the y_train so that when duplicates are found, they are removed together with the label, otherwise the record will be removed from X_train and not removed from y_train, thus leaving different dimentions than the ones needed for the classifiers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "b5a47084",
    "metadata": {},
    "outputs": [],
@@ -1349,30 +1349,6 @@
     "\n",
     "X_train, y_train = removeDuplicates(X_train, y_train)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f3af04c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e97edb1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14f7be66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1393,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "1a235393",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1379,6 @@
     "    X_train = pd.DataFrame(min_max_scaler.fit_transform(X_train.values)) #fitting and transforming on train data\n",
     "    X_test = pd.DataFrame(min_max_scaler.transform(X_test.values)) #only transforming the test and validation sets\n",
     "    X_test_Final = pd.DataFrame(min_max_scaler.transform(X_test_Final.values))\n",
-    "    X_train\n",
     "    return X_train, X_test, X_test_Final\n",
     "\n",
     "X_train, X_test, X_test_Final = scale(X_train, X_test, X_test_Final)"
@@ -1466,7 +1441,7 @@
    "id": "e584235b",
    "metadata": {},
    "source": [
-    "We can see that the amount of records in the training set has not changes, whereas the number of features has dropped drastically from 10000 to 333! That is only a small fraction of of the amount of features before the use of PCA, which still result in a relatively good accuracy score."
+    "We can see that the amount of records in the training set has not changes, whereas the number of features has dropped drastically from 10000 to 335! That is only a small fraction of of the amount of features before the use of PCA, which still result in a relatively good accuracy score."
    ]
   },
   {
@@ -1799,7 +1774,7 @@
    "id": "a4e59d47",
    "metadata": {},
    "source": [
-    "We can now move on to more advanced models that use Ensemble Learning. The first one of these shall be the <b>Random Forests</b> Classifier. This classifier uses ensemble learning by constructing a multitude of decision trees (specified with the n_estimators hyperparameter, defaults at 100), with a maximum depth of 10 for each tree (specified by the max_depth hyperparameter). After several tests, the number of estimators was set to 500, as the best correlation of time and resource consumption.\n",
+    "We can now move on to more advanced models that use Ensemble Learning (the concept is explained in detail in the \"Airline Satisfaction\" notebook). The first one of these shall be the <b>Random Forests</b> Classifier. This classifier uses ensemble learning by constructing a multitude of decision trees (specified with the n_estimators hyperparameter, defaults at 100), with a maximum depth of 10 for each tree (specified by the max_depth hyperparameter). After several tests, the number of estimators was set to 500, as the best correlation of accuracy to time and resource consumption.<br>\n",
     "For the test set, each trees prediction is calculated, the results then aggregated, and the final answer is given. The aggregation is performed by each trees result counted and the \"majority vote\" is the final answer of the classifier."
    ]
   },
@@ -1893,7 +1868,8 @@
    "id": "d70d4844",
    "metadata": {},
    "source": [
-    "Next, we will check the performance of the <b>AdaBoost Classifier</b> (AdaBoost stands for Adaptive Boost). This classifier also uses ensemble learning to achieve its purpose. After receiving the results from some base classifier, in our case the Decision Tree Classifier, the model then performs the base classifier over and over (n_estimator times), while each time giving more weight to the misclassified training instances. Then, again using ensemble learning techniques the model returns its final answer according to the many sub-models it created."
+    "Next, we will check the performance of the <b>AdaBoost Classifier</b> (AdaBoost stands for Adaptive Boost). This classifier also uses ensemble learning to achieve its purpose. After receiving the results from some base classifier, in our case the Decision Tree Classifier, the model then performs the base classifier over and over (n_estimator times), while each time giving more weight to the misclassified training instances. Then, again using ensemble learning techniques the model returns its final answer according to the many sub-models it created.<br>\n",
+    "The learning rate hyperparameter was left at the default value of 1 (after several tests to determine the best value). The hyperparameter specifies the rate of adaptability of the classifier to the data after each iteration of the estimator."
    ]
   },
   {
@@ -1987,7 +1963,7 @@
    "id": "a67b8530",
    "metadata": {},
    "source": [
-    "Last of the single models (but certainly not least), we shall run the <b>XGBoost Classifier</b> on our data (XGBoost standing for Extreme Gradient Boosting, which uses Ensemble Learning and boosting in a similar yet different way to AdaBoost above. Where AdaBoost tweaks the individual instance weights, giving some more or less wight, XGBoost fits a new predictor to the residual errors made by the previous predictor. It should be noted that the residual errors get smaller with each iteration of XGBoost, making the model very effective (in many cases the most effective out of all)."
+    "Last of the single models (but certainly not least), we shall run the <b>XGBoost Classifier</b> on our data (XGBoost standing for Extreme Gradient Boosting, which uses Ensemble Learning and boosting in a similar yet different way to AdaBoost above. Where AdaBoost tweaks the individual instance weights, giving some more or less weight, XGBoost fits a new predictor to the residual errors made by the previous predictor. It should be noted that the residual errors get smaller with each iteration of XGBoost, making the model very effective (in many cases the most effective out of all)."
    ]
   },
   {
@@ -2185,7 +2161,7 @@
    "id": "638c0ef2",
    "metadata": {},
    "source": [
-    "Another option we will now observe is to use the <b>Bagging/Pasting Classifiers</b>. These classifiers combine not many different models, but a single model where the data is divided into multiple parts (the number is defined in the n_estimators hyperparameter), and a single model is run on all these subsections, resulting in a quite accurate model. When the samples taken from the complete dataset can be chosen twice or more for a single predictor, the model is called Bagging, if not then it is Pasting. In practice, Pasting is used more when the dataset is large, while for smaller datasets, the Bagging Classifier may be a good choice. We will try to use both classifiers to see how it performs on our data. The difference between the two classifiers in code is only the \"bootstrap\" hyperparameter. We will Use the XGBoost calssifier as the estimator, as it performed best out of the classifiers we have evaluated up to this point, but we shall reduce the number of estimators in each XGBoost run to reduce time."
+    "Another option we will now observe is to use the <b>Bagging/Pasting Classifiers</b>. These classifiers combine not many different models, but a single model where the data is divided into multiple parts (the number is defined in the n_estimators hyperparameter), and a single model is run on all these subsections, resulting in a quite accurate model. When the samples taken from the complete dataset can be chosen twice or more for a single predictor, the model is called Bagging, if not then it is Pasting. In practice, Pasting is used more when the dataset is large, while for smaller datasets, the Bagging Classifier may be a good choice. We will try to use both classifiers to see how it performs on our data. The difference between the two classifiers in code is only the \"bootstrap\" hyperparameter. We will Use the XGBoost calssifier as the estimator, as it performed best out of the classifiers we have evaluated up to this point, but we shall reduce the number of estimators in each XGBoost run to reduce runtime."
    ]
   },
   {
@@ -2304,7 +2280,7 @@
     }
    ],
    "source": [
-    "#Psting\n",
+    "#Pasting\n",
     "start_timePasting = time.time()\n",
     "warnings.filterwarnings('ignore')\n",
     "modelPasting = BaggingClassifier(modelXGBoost, n_estimators = 100, bootstrap = False)\n",
@@ -2582,12 +2558,12 @@
    "source": [
     "def accuraciesGraph(bounds):\n",
     "    accuracies = [accuracyDummy, accuracyKNN, accuracyLogReg, accuracyRandForests, accuracyAdaBoost, accuracyXGBoost,\n",
-    "                  accuracyVoting, accuracyBagging, accuracyStacking]\n",
+    "                  accuracyVoting, accuracyBagging, accuracyPasting, accuracyStacking]\n",
     "    fig = plt.figure(figsize=(13,6))\n",
     "    accuraciesSize = np.arange(len(accuracies))\n",
     "    axes = fig.add_axes([0,0,1,1])\n",
     "    labels = ['Dummy', 'KNN', 'Logistic Regression', 'Random Forest', 'AdaBoost', 'XGBoost', 'Voting', 'Bagging',\n",
-    "              'Stacking']\n",
+    "              'Pasting', 'Stacking']\n",
     "    axes.bar(labels, accuracies)\n",
     "    axes.set_ylabel(\"Accuracy Score\")\n",
     "    axes.set_title(\"Accuracy Scores of the Different Classifiers\")\n",
@@ -2629,11 +2605,11 @@
     "    fig = plt.figure(figsize=(13,6))\n",
     "\n",
     "    time = [timeDummy, timeKNN, timeLogReg, timeRandForests, timeAdaBoost, timeXGBoost,\n",
-    "             timeVoting, timeBagging, timeStacking]\n",
+    "             timeVoting, timeBagging, timePasting, timeStacking]\n",
     "    timeSize = np.arange(len(time))\n",
     "    axes = fig.add_axes([0,0,1,1])\n",
     "    labels = ['Dummy', 'KNN', 'Logistic Regression', 'Random Forest', 'AdaBoost', 'XGBoost', 'Voting', 'Bagging',\n",
-    "              'Stacking']\n",
+    "              'Pasting', 'Stacking']\n",
     "    axes.bar(labels, time)\n",
     "    axes.set_ylabel(\"Runtime (Seconds)\")\n",
     "    axes.set_title(\"Runtimes of the Different Classifiers\")\n",
@@ -3446,7 +3422,7 @@
     }
    ],
    "source": [
-    "#Psting\n",
+    "#Pasting\n",
     "start_timePasting = time.time()\n",
     "warnings.filterwarnings('ignore')\n",
     "modelPasting = BaggingClassifier(modelXGBoost, n_estimators = 100, bootstrap = False)\n",
@@ -3865,7 +3841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4c8fcc",
+   "id": "ceaab7cc",
    "metadata": {},
    "source": [
     "## Final Predict and Test"
@@ -3873,11 +3849,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "143fea8d",
+   "id": "53c2429d",
    "metadata": {},
    "source": [
     "Now that we have chosen our best classifier using our training and validation sets, with the hyperparameter tuning being done on the vcalidation set, we can now try and test how the classifier will react to previously unseen data, for which the model was not specifically tuned. This will give us an inclination of how the classifier will perform on real life data. Results will be explained and interpreted in the conclusion below."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a91abe4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3916,7 +3900,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bb07b298",
+   "id": "9b9a92f7",
    "metadata": {},
    "outputs": [
     {
