Tweaks to Airlines

--- a/Airline Satisfaction - Classification.ipynb
+++ b/Airline Satisfaction - Classification.ipynb
@@ -1544,7 +1544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we create a dataframe of correlations between every attribute with one another. The dataframe represents the linear correlation between the attributes (nonlinear relations have very low values as the functions considers only linear relations). The values range between -1 and 1, where positive values represent positive relations (\"as X increases, Y increases\"), while negative value represent negative relations (\"as X increases, Y decreases\"). All attribute has an exact linear relation with itself (1.0000). A final thing to not is that the table presented has many duplicates (we could remove the upper right triangle (if the table were cut diagonally from the upper-left corner to the lower-right corner), and not lose any data).<br>\n",
+    "Below we create a dataframe of correlations between every attribute with one another. The dataframe represents the linear correlation between the attributes (nonlinear relations have very low values as the functions considers only linear relations). The values range between -1 and 1, where positive values represent positive relations (\"as X increases, Y increases\"), while negative value represent negative relations (\"as X increases, Y decreases\"). Each attribute has an exact linear relation with itself (1.0000). A final thing to note is that the table presented has many duplicates (we could remove the upper right triangle (if the table were cut diagonally from the upper-left corner to the lower-right corner), and not lose any data).<br>\n",
     "Using this data, we plot a heatmap using seaborn, to better and easier see the higher values."
    ]
   },
