Spell checking notebooks

--- a/Airline Satisfaction - Classification.ipynb
+++ b/Airline Satisfaction - Classification.ipynb
@@ -4427,7 +4427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, for the two classifiers, we can record their results in the table we created.<br>\n",
+    "Now, for the two classifiers, we can record their results in the dataframe we created.<br>\n",
     "The results were quite unexpected. We expected the runtime of the program to reduce, as well as the accuracy of the model to drop slightly.<br>\n",
     "We can see that the accuracy, as expected, was reduced, as was the number of dimensions, meaning the PCA algorithm worked. Despite that, the runtime of the classifiers was not reduced (quite the opposite). This, after much scrupulus research, turns out to be due to most of the data being discrete (having a very limited number of unique values for a feature). PCA, when exposed to such data, performs as expected in all regards but runtime, which increases (in our case the runtime was increased to three times the runtime of the program before PCA). Meaning, put plainly, that PCA is meant to be used (if the purpose is to reduce runtime) only on continuous data, or when the number of unique values in each feature is large.<br>\n",
     "Note, that the PCA algorithm is still very useful for discrete data if we want to minimize data size while maximizing accuracy. This is not the case for us, as we wished to reduce runtime."
