--- a/Fashion MNIST.ipynb
+++ b/Fashion MNIST.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "This data is a further complication of the MNIST dataset, which is considered very simple, as using only a very limited number of pixels (features), very high accuracies can be achieved. This data, in this regard at least, is more complicated.\n",
     "\n",
-    "We shall import the dataset through Tensorflow, though we do not use neural networks for the task. The data is imported already divided into a training and testing sets, so there is no need for us to do so, but rather only divide the training set itself into a training and validation sets (explained lated). The data is imported as a single dataframe 3D array (an array of 2D arrays each of which is an image, meaning the 2D array is the pixel matrix of the image (each cell is the grayscale value of the corresponding pixel)).<br>\n",
+    "We shall import the dataset through TensorFlow, though we do not use neural networks for the task. The data is imported already divided into a training and testing sets, so there is no need for us to do so, but rather only divide the training set itself into a training and validation sets (explained later). The data is imported as a single dataframe 3D array (an array of 2D arrays each of which is an image, meaning the 2D array is the pixel matrix of the image (each cell is the grayscale value of the corresponding pixel)).<br>\n",
     "The data can also be found on Kaggle.com at the link: https://www.kaggle.com/zalando-research/fashionmnist"
    ]
   },
@@ -26,7 +26,7 @@
    "id": "2c1f5016",
    "metadata": {},
    "source": [
-    "<b>Note:</b> this notebook was created as a brand new notebook, with no regard to previous notebooks written, so all explanations regarding actions done and classifiers used (when applicable) is the same as in previous notebooks (some parts were copied and only the parts that are unique to this notebook have been changed, such as why one hyperparameter was set to one specific value and not another)."
+    "<b>Note:</b> this notebook was created as a brand-new notebook, with no regard to previous notebooks written, so all explanations regarding actions done and classifiers used (when applicable) is the same as in previous notebooks (some parts were copied and only the parts that are unique to this notebook have been changed, such as why one hyperparameter was set to one specific value and not another)."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "id": "a87773f9",
    "metadata": {},
    "source": [
-    "To improve the readability of the data, while also preparing the data for further preprocessing and for the classifiers, we must transform the data to a 2D shpe and make it a dataframe instead of an array. This we can accomplish by using the reshape() function. We know that each picture is 28X28, so, flattened, there will be 28*28 pixens in the array."
+    "To improve the readability of the data, while also preparing the data for further preprocessing and for the classifiers, we must transform the data to a 2D shape and make it a dataframe instead of an array. This we can accomplish by using the reshape() function. We know that each picture is 28X28, so, flattened, there will be 28*28 pixels in the array."
    ]
   },
   {
@@ -301,7 +301,7 @@
    "id": "4b84784e",
    "metadata": {},
    "source": [
-    "So as not to introduce bias to our program, our calssifiers and all other actions performed on the data, we shall now split the data into a training and testing set. As we do not want to introduce bias when constructing and tuning our classifiers, we wish to not touch the testing set right up to the end, after the best classifier was chosen, we shall split the training set itself into a training and testing set (can also be called validation set), on which we shall run and tune our classifiers. We choose the size of the validation set of 10% of the data from which it splits (the training set), as the 10% (6000 records) are, in my opinion, enough to determine the quality of the classifiers."
+    "So as not to introduce bias to our program, our classifiers and all other actions performed on the data, we shall now split the data into a training and testing set. As we do not want to introduce bias when constructing and tuning our classifiers, we wish to not touch the testing set right up to the end, after the best classifier was chosen, we shall split the training set itself into a training and testing set (can also be called validation set), on which we shall run and tune our classifiers. We choose the size of the validation set of 10% of the data from which it splits (the training set), as the 10% (6000 records) are, in my opinion, enough to determine the quality of the classifiers."
    ]
   },
   {
@@ -328,8 +328,8 @@
    "id": "ac84015e",
    "metadata": {},
    "source": [
-    "We need to check that the training set does not contain duplicates (all feature values are the same), as they are not helpful for the classifiers. When found, the duplicates can be safely removed. This is run on the training set, and was not done before the split into training and testing sets because in theory, the same image as the one the calssifiers were trained on can be given to the classifier to test and return an answer on the image's class of clothing. Hence, the duplicates should be removed only from the training set, and not from the validation set or from the test set.<br>\n",
-    "This is done by first merging the X_train and the y_train so that when duplicates are found, they are removed together with the label, otherwise the record will be removed from X_train and not removed from y_train, thus leaving different dimentions than the ones needed for the classifiers."
+    "We need to check that the training set does not contain duplicates (all feature values are the same), as they are not helpful for the classifiers. When found, the duplicates can be safely removed. This is run on the training set and was not done before the split into training and testing sets because in theory, the same image as the one the classifiers were trained on can be given to the classifier to test and return an answer on the image's class of clothing. Hence, the duplicates should be removed only from the training set, and not from the validation set or from the test set.<br>\n",
+    "This is done by first merging the X_train and the y_train so that when duplicates are found, they are removed together with the label, otherwise the record will be removed from X_train and not removed from y_train, thus leaving different dimensions than the ones needed for the classifiers."
    ]
   },
   {
@@ -379,7 +379,7 @@
    "metadata": {},
    "source": [
     "Next, we need to normalize our data, meaning transforming every value of 1-255 (the possible grayscale values of each pixel) to values in the range [0, 1]. This is done because most (if not all) classifiers expect and work best on such values from 0 to 1. This is done using the MinMaxScaler() method. The scaling is fitted to the train data, then both the train and the test data are transformed according to what was fitted.<br>\n",
-    "Note: standartization was not used instead, because the data we are evaluating does not have any outliers, so we need not concern ourselves with them (all values range from 0 to 255)."
+    "Note: standardization was not used instead, because the data we are evaluating does not have any outliers, so we need not concern ourselves with them (all values range from 0 to 255)."
    ]
   },
   {
@@ -773,10 +773,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6943e51",
+   "metadata": {},
+   "source": [
+    "The PCA algorithm is explained in detail in the \"Airline Satisfaction\" notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29b8e284",
    "metadata": {},
    "source": [
-    "We can see that the amount of records in the training set has not changes, whereas the number of features has dropped drastically from 10000 to 335! That is only a small fraction of of the amount of features before the use of PCA, which still result in a relatively good accuracy score."
+    "We can see that the number of records in the training set has not changes, whereas the number of features has dropped drastically from 10000 to 335! That is only a small fraction of the number of features before the use of PCA, which still result in a relatively good accuracy score."
    ]
   },
   {
@@ -1000,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5168d6b",
+   "id": "c8ac9af7",
    "metadata": {},
    "source": [
     "### Gaussian Naive Bayes"
@@ -1008,16 +1016,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ca1e8af",
+   "id": "57a6a99f",
    "metadata": {},
    "source": [
-    "Before we start with the models using Ensemble learning though, We would like to try using a calssifier called <b>Gaussian Naive Bayes</b>. This classifier uses the Gaussian distribution to help it classify records. By calculating the likelihoods for each feature on whether it is of one class or another, and multiplying these likelihoods for all classes (in our case 10), the classifier does its work. Note that it takes into account the imbalanced data (if exists) as the defaul priors for each class (calculated by the classifier)."
+    "Before we start with the models using Ensemble learning though, we would like to try using a classifier called Gaussian Naive Bayes. This classifier uses the Gaussian distribution to help it classify records. By calculating the likelihoods for each feature on whether it is of one class or another and multiplying these likelihoods for all classes (in our case 10), the classifier does its work. Note that it considers the imbalanced data (if exists) as the default priors for each class (calculated by the classifier)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "02506ad4",
+   "id": "2f9300d5",
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1550,7 @@
    "id": "1334fb32",
    "metadata": {},
    "source": [
-    "Another option we will now observe is to use the <b>Bagging/Pasting Classifiers</b>. These classifiers combine not many different models, but a single model where the data is divided into multiple parts (the number is defined in the n_estimators hyperparameter), and a single model is run on all these subsections, resulting in a quite accurate model. When the samples taken from the complete dataset can be chosen twice or more for a single predictor, the model is called Bagging, if not then it is Pasting. In practice, Pasting is used more when the dataset is large, while for smaller datasets, the Bagging Classifier may be a good choice. We will try to use both classifiers to see how it performs on our data. The difference between the two classifiers in code is only the \"bootstrap\" hyperparameter. We will Use the XGBoost calssifier as the estimator, as it performed best out of the classifiers we have evaluated up to this point, but we shall reduce the number of estimators in each XGBoost run to reduce runtime."
+    "Another option we will now observe is to use the <b>Bagging/Pasting Classifiers</b>. These classifiers combine not many different models, but a single model where the data is divided into multiple parts (the number is defined in the n_estimators hyperparameter), and a single model is run on all these subsections, resulting in a quite accurate model. When the samples taken from the complete dataset can be chosen twice or more for a single predictor, the model is called Bagging, if not then it is Pasting. In practice, Pasting is used more when the dataset is large, while for smaller datasets, the Bagging Classifier may be a good choice. We will try to use both classifiers to see how it performs on our data. The difference between the two classifiers in code is only the \"bootstrap\" hyperparameter. We will Use the XGBoost classifier as the estimator, as it performed best out of the classifiers we have evaluated up to this point, but we shall reduce the number of estimators in each XGBoost run to reduce runtime."
    ]
   },
   {
@@ -1861,7 +1869,7 @@
    "id": "a39dbca1",
    "metadata": {},
    "source": [
-    "Next, The bar graph for the runtimes is shown. We can identify the Bagging and Pasting Classifiers as the ones with the longest runtime, even to the point where we dont show them in our graph, as their runtime prevents them from being considered for \"best classifier\". The Stacking Classifier, too, runs for a relatively long time, but due to its high accuracy score, we shall continue to judge it."
+    "Next, the bar graph for the runtimes is shown. We can identify the Bagging and Pasting Classifiers as the ones with the longest runtime, even to the point where we do not show them in our graph, as their runtime prevents them from being considered for \"best classifier\". The Stacking Classifier, too, runs for a relatively long time, but due to its high accuracy score, we shall continue to judge it."
    ]
   },
   {
@@ -2021,7 +2029,7 @@
    "source": [
     "## Choosing Best Classifier\n",
     "\n",
-    "After consideration of the dataframe above, we can decide on the best classifier up to this point. The most accurate calssifier is the Stacking Classifier, but its runtime of 52 minutes leaves much to be desired for. The next most accurate model is the Voting Classifier, with a drop in accuracy of only 0.1%, runs 5 times faster than the Stacking. This is definetely better. The Bagging and Pasting classifiers will not be considered due to their long runtime, while the XGBoost classifier, though not bad at all, drops the accuracy by almost 0.2 while improving runtime by only 40 seconds. In my opinion it is not an even trade, thus the XGBoost, too, is \"disqualified\". The Random Forests Classifier , on the other hand, might certainly be a viable option, as with a drop in accuracy of 0.3%, it runs 30 times faster than the Voting Classifier. If the resources were limited, than this would certainly be our top choice, but I believe 600 seconds to be a tolerable runtime, hence I will consider Voting to be better than the Random Forests. The other classifiers have nothing very \"exciting\" about them, thus will not be discussed further."
+    "After consideration of the dataframe above, we can decide on the best classifier up to this point. The most accurate classifier is the Stacking Classifier, but its runtime of 52 minutes leaves much to be desired for. The next most accurate model is the Voting Classifier, with a drop in accuracy of only 0.1%, runs 5 times faster than the Stacking. This is definitely better. The Bagging and Pasting classifiers will not be considered due to their long runtime, while the XGBoost classifier, though not bad at all, drops the accuracy by almost 0.2 while improving runtime by only 40 seconds. In my opinion it is not an even trade, thus the XGBoost, too, is \"disqualified\". The Random Forests Classifier , on the other hand, might certainly be a viable option, as with a drop in accuracy of 0.3%, it runs 30 times faster than the Voting Classifier. If the resources were limited, then this would certainly be our top choice, but I believe 600 seconds to be a tolerable runtime, hence I will consider Voting to be better than the Random Forests. The other classifiers have nothing very \"exciting\" about them, thus will not be discussed further."
    ]
   },
   {
@@ -2034,11 +2042,11 @@
     "The last thing we want to try before deciding the best classifier for our data is using K-Means Clustering as part of our preprocessing of the data.<br>\n",
     "In general, the K-Means Clustering method is used for unsupervised learning, dividing the data into multiple clusters, as specified in the \"n_clusters\" hyperparameter. This is done, in short, by choosing the best starting points (centroids) of the clusters, and then classifying all remaining records to each one's closest centroid.\n",
     "\n",
-    "We can use this method, however, not only in unsupervised learning, but also as a part of the preprocessing and dimentionality reduction of the data. This is done by dividing the data into clusters, and the concatenation of each record's (from the original data) distance from each of the clusters forms a new dataset, on which the classifiers are run to fit and predict the labels of training and testing sets, respectively.\n",
+    "We can use this method, however, not only in unsupervised learning, but also as a part of the preprocessing and dimensionality reduction of the data. This is done by dividing the data into clusters, and the concatenation of each record's (from the original data) distance from each of the clusters forms a new dataset, on which the classifiers are run to fit and predict the labels of training and testing sets, respectively.\n",
     "\n",
     "We run the pipeline on the Voting Classifier which we deemed best out of all others for this data. We do not run Grid Search due to its long runtime, but several tests were made by hand. The results are that the K-Means does not improve on the classifier we have created, rather the opposite:\n",
     "\n",
-    "The results for different amount of clusters were:\n",
+    "The results for different number of clusters were:\n",
     " - 50 clusters: Accuracy: 0.821, Runtime: 517 seconds\n",
     " - 100 clusters: Accuracy: 0.82, Runtime: 934 seconds\n",
     " - 200 clusters: Accuracy: 0.835, Runtime: 1722 seconds\n",
@@ -2085,7 +2093,7 @@
    "id": "5126ed1d",
    "metadata": {},
    "source": [
-    "Now that we have chosen our best classifier using our training and validation sets, with the hyperparameter tuning being done on the vcalidation set, we can now try and test how the classifier will react to previously unseen data, for which the model was not specifically tuned. This will give us an inclination of how the classifier will perform on real life data. Results will be explained and interpreted in the conclusion below."
+    "Now that we have chosen our best classifier using our training and validation sets, with the hyperparameter tuning being done on the validation set, we can now try and test how the classifier will react to previously unseen data, for which the model was not specifically tuned. This will give us an inclination of how the classifier will perform on real life data. Results will be explained and interpreted in the conclusion below."
    ]
   },
   {
